# zed-skills

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
crates/skills-cli/: Cargo.toml
crates/skills-cli/src/: main.rs  render.rs
crates/skills-cli/src/commands/: add.rs  init.rs  lsp.rs  mod.rs  show.rs  update.rs
crates/skills-cli/tests/: e2e_audit.rs  e2e_bin.rs  e2e_check.rs  e2e_composer.rs  e2e_dir.rs  e2e_lockpath.rs  e2e_naming.rs  e2e_npm.rs  e2e_remote.rs  e2e_sync.rs  invariants.rs
crates/skills-cli/tests/common/: mod.rs
crates/skills-cli/tests/fixtures/alias/: skills.json
crates/skills-cli/tests/fixtures/alias/skills-src/code-review/: SKILL.md
crates/skills-cli/tests/fixtures/alias/skills-src/docs-helper/: SKILL.md
crates/skills-cli/tests/fixtures/alias/skills-src/plain/: SKILL.md
crates/skills-cli/tests/fixtures/audit/: skills.json
crates/skills-cli/tests/fixtures/audit/clean-src/tidy/: SKILL.md
crates/skills-cli/tests/fixtures/audit/danger-src/payload/: SKILL.md
crates/skills-cli/tests/fixtures/basic/: skills.json
crates/skills-cli/tests/fixtures/conflict/: skills.json
crates/skills-cli/tests/fixtures/conflict/vendor-a/clashing/: SKILL.md
crates/skills-cli/tests/fixtures/lockpath/: skills.json
crates/skills-cli/tests/fixtures/sandbox/: composer.json
crates/skills-cli/tests/snapshots/: e2e_audit__audit_warn_stdout.snap  e2e_bin__bin_show_after_update.snap  e2e_bin__bin_show_before_update.snap  e2e_bin__bin_update_alias_stdout.snap  e2e_bin__bin_update_dry_run_stdout.snap  e2e_bin__bin_update_stdout.snap  e2e_check__bin_check_out_of_sync_stdout.snap  e2e_composer__composer_default_show_stdout.snap  e2e_composer__composer_default_update_stdout.snap  e2e_lockpath__bin_lock_moved_stdout.snap  e2e_naming__case_conflict_stderr.snap  e2e_remote__remote_lockfile.snap  e2e_remote__remote_target_tree.snap  e2e_sync__basic_lockfile.snap  e2e_sync__basic_target_tree.snap
crates/skills-core/: Cargo.toml
crates/skills-core/src/: audit.rs  domain.rs  error.rs  frontmatter.rs  fsutil.rs  lib.rs  link.rs  lockfile.rs  manifest.rs  naming.rs  paths.rs  pattern.rs  traits.rs
crates/skills-core/src/pipeline/: audit.rs  ctx.rs  discover.rs  materialize.rs  mod.rs  plan.rs  resolve.rs  scan.rs  sync.rs  trust.rs
crates/skills-core/tests/: schema.rs
crates/skills-lsp/: Cargo.toml
crates/skills-lsp/src/: analysis.rs  completion.rs  fmcheck.rs  hover.rs  lib.rs  links.rs  offline.rs  server.rs  spanindex.rs  tasks.rs  update.rs  watch.rs
crates/skills-lsp/src/snapshots/: skills_lsp__tasks__tests__fresh_file_snapshot_and_backslash_escaping.snap
crates/skills-lsp/tests/: lsp_completion.rs  lsp_exec_command.rs  lsp_hover.rs  lsp_links.rs  lsp_manifest_diags.rs  lsp_skill_docs.rs  lsp_tasks.rs  lsp_watch_smoke.rs
crates/skills-lsp/tests/common/: mod.rs
crates/skills-lsp/tests/snapshots/: lsp_completion__completion_key_labels.snap  lsp_hover__hover_effort_key.snap  lsp_links__document_links_summary.snap  lsp_manifest_diags__conflict.snap  lsp_manifest_diags__deprecated_remote.snap  lsp_manifest_diags__missing_dir_source.snap  lsp_manifest_diags__not_fetched.snap  lsp_manifest_diags__parse_error.snap  lsp_manifest_diags__semantic_errors.snap  lsp_manifest_diags__stale_lock.snap  lsp_manifest_diags__unknown_allowlist.snap  lsp_skill_docs__skill_md_dir_danger.snap  lsp_skill_docs__skill_md_dir_format.snap  lsp_skill_docs__skill_md_findings.snap  lsp_skill_docs__skill_md_frontmatter_validation.snap  lsp_skill_docs__skill_md_missing_name.snap  lsp_tasks__setup_command_creates_the_file_then_reports_up_to_date.snap
crates/skills-providers/: Cargo.toml
crates/skills-providers/src/: addparse.rs  archive.rs  cachepath.rs  composer.rs  dir.rs  github.rs  gitlab.rs  http.rs  lib.rs  locate.rs  npm.rs  refresolver.rs  remote.rs  testkit.rs  treescan.rs  url.rs
crates/skills-providers/tests/: dir_contract.rs  remote_wiremock.rs
extension/: .gitignore  Cargo.toml  README.md  extension.toml
extension/languages/skill-md/: config.toml  highlights.scm  injections.scm
extension/languages/skills-json/: config.toml  highlights.scm  runnables.scm  tasks.json
extension/src/: lib.rs
(+19 files in other folders)
