[package]
name = "skills"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
skills-core.workspace = true
skills-providers.workspace = true
skills-audit.workspace = true
clap.workspace = true
tokio.workspace = true
serde_json.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
insta.workspace = true
tempfile.workspace = true
walkdir.workspace = true
wiremock.workspace = true
