[package]
name = "skills-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
unicode-normalization.workspace = true
tokio.workspace = true
async-trait.workspace = true
walkdir.workspace = true
tempfile.workspace = true
