[package]
name = "skills-lsp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
skills-core.workspace = true
skills-providers.workspace = true
skills-audit.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["time", "io-std", "io-util"] }
tower-lsp-server.workspace = true
jsonc-parser.workspace = true
notify.workspace = true
notify-debouncer-mini.workspace = true

[dev-dependencies]
tempfile.workspace = true
insta.workspace = true
