[package]
name = "skills-providers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
skills-core.workspace = true
async-trait.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
