[package]
name = "skills-providers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
skills-core.workspace = true
async-trait.workspace = true
tokio.workspace = true
thiserror.workspace = true
serde_json.workspace = true
sha2.workspace = true
reqwest.workspace = true
zip.workspace = true
tempfile.workspace = true

[dev-dependencies]
wiremock.workspace = true
